src/objects/Inventory_Stage__c.object
<CustomObject>
    <description>FIT Project</description>
    <fields>
        <fullName>Batch_Lot_Number__c</fullName>
        <label>Batch/Lot #</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error__c</fullName>
        <label>Error</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Full__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Full</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Inventory_ID__c</fullName>
        <externalId>true</externalId>
        <label>Inventory ID</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Material__c</fullName>
        <label>Material #</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Model_Number__c</fullName>
        <label>Model #</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Receipt_Date__c</fullName>
        <label>Receipt Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Serial_Number__c</fullName>
        <label>Serial #</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stock_Partner_Number__c</fullName>
        <label>Stock Partner #</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Use_By_Date__c</fullName>
        <label>Use By Date</label>
        <type>Date</type>
    </fields>
    <label>Inventory Stage</label>
    <listViews>
        <fullName>All_Inventory_Stage</fullName>
        <columns>CREATED_DATE</columns>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Inventory_ID__c</columns>
        <columns>Processed__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Batch_Lot_Number__c</columns>
        <columns>Material__c</columns>
        <columns>Model_Number__c</columns>
        <columns>Quantity__c</columns>
        <columns>Receipt_Date__c</columns>
        <columns>Serial_Number__c</columns>
        <columns>Status__c</columns>
        <columns>Stock_Partner_Number__c</columns>
        <columns>Use_By_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Inventory Stage</label>
    </listViews>
    <nameField>
        <displayFormat>IS-{00000}</displayFormat>
        <label>Inventory #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inventory Stage</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>